Address comments; Fix tests